src/main/java/parser/BasicParser.java
// Generated from BasicParser.g4 by ANTLR 4.7.1

    package parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BasicParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OPEN_PARENTHESES=1, CLOSE_PARENTHESES=2, COMMA=3, SEMICOLON=4, BEGIN=5, 
		END=6, IS=7, SKIPS=8, ASSIGN=9, READ=10, FREE=11, RETURN=12, EXIT=13, 
		PRINT=14, PRINTLN=15, IF=16, THEN=17, ELSE=18, FI=19, WHILE=20, DO=21, 
		DONE=22, NEWPAIR=23, CALL=24, FST=25, SND=26, OPEN_BRACKET=27, CLOSE_BRACKET=28, 
		NOT=29, NEG=30, LENGTH=31, ORD=32, CHR=33, MULDIVMOD=34, ADD=35, CMP=36, 
		EQ=37, ANDOR=38, BASE_TYPE=39, PAIR=40, INT_LITER=41, BOOL_LITER=42, PAIR_LITER=43, 
		CHAR_LITER=44, STR_LITER=45, IDENT=46, COMMENT=47, WS=48;
	public static final int
		RULE_prog = 0, RULE_func = 1, RULE_param = 2, RULE_stat = 3, RULE_statSkip = 4, 
		RULE_statInitVar = 5, RULE_statAssignVar = 6, RULE_statRead = 7, RULE_statFree = 8, 
		RULE_statReturn = 9, RULE_statExit = 10, RULE_statPrint = 11, RULE_statPrintln = 12, 
		RULE_statCond = 13, RULE_statLoop = 14, RULE_statBegin = 15, RULE_assignLhs = 16, 
		RULE_assignRhs = 17, RULE_call = 18, RULE_newpair = 19, RULE_pairElem = 20, 
		RULE_pairElemFst = 21, RULE_pairElemSnd = 22, RULE_expr = 23, RULE_exprIntLit = 24, 
		RULE_exprBoolLit = 25, RULE_exprCharLit = 26, RULE_exprStrLit = 27, RULE_exprPairLit = 28, 
		RULE_exprParen = 29, RULE_exprUnop = 30, RULE_type = 31, RULE_baseType = 32, 
		RULE_pairType = 33, RULE_pairElemType = 34, RULE_arrayType = 35, RULE_arrayElem = 36, 
		RULE_intLiter = 37, RULE_arrayLiter = 38, RULE_ident = 39;
	public static final String[] ruleNames = {
		"prog", "func", "param", "stat", "statSkip", "statInitVar", "statAssignVar", 
		"statRead", "statFree", "statReturn", "statExit", "statPrint", "statPrintln", 
		"statCond", "statLoop", "statBegin", "assignLhs", "assignRhs", "call", 
		"newpair", "pairElem", "pairElemFst", "pairElemSnd", "expr", "exprIntLit", 
		"exprBoolLit", "exprCharLit", "exprStrLit", "exprPairLit", "exprParen", 
		"exprUnop", "type", "baseType", "pairType", "pairElemType", "arrayType", 
		"arrayElem", "intLiter", "arrayLiter", "ident"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", "','", "';'", "'begin'", "'end'", "'is'", "'skip'", 
		"'='", "'read'", "'free'", "'return'", "'exit'", "'print'", "'println'", 
		"'if'", "'then'", "'else'", "'fi'", "'while'", "'do'", "'done'", "'newpair'", 
		"'call'", "'fst'", "'snd'", "'['", "']'", "'!'", "'-'", "'len'", "'ord'", 
		"'chr'", null, "'+'", null, null, null, null, "'pair'", null, null, "'null'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "OPEN_PARENTHESES", "CLOSE_PARENTHESES", "COMMA", "SEMICOLON", "BEGIN", 
		"END", "IS", "SKIPS", "ASSIGN", "READ", "FREE", "RETURN", "EXIT", "PRINT", 
		"PRINTLN", "IF", "THEN", "ELSE", "FI", "WHILE", "DO", "DONE", "NEWPAIR", 
		"CALL", "FST", "SND", "OPEN_BRACKET", "CLOSE_BRACKET", "NOT", "NEG", "LENGTH", 
		"ORD", "CHR", "MULDIVMOD", "ADD", "CMP", "EQ", "ANDOR", "BASE_TYPE", "PAIR", 
		"INT_LITER", "BOOL_LITER", "PAIR_LITER", "CHAR_LITER", "STR_LITER", "IDENT", 
		"COMMENT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "BasicParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BasicParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(BasicParser.BEGIN, 0); }
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public TerminalNode END() { return getToken(BasicParser.END, 0); }
		public TerminalNode EOF() { return getToken(BasicParser.EOF, 0); }
		public List<FuncContext> func() {
			return getRuleContexts(FuncContext.class);
		}
		public FuncContext func(int i) {
			return getRuleContext(FuncContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(BEGIN);
			setState(84);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(81);
					func();
					}
					} 
				}
				setState(86);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(87);
			stat(0);
			setState(88);
			match(END);
			setState(89);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public TerminalNode OPEN_PARENTHESES() { return getToken(BasicParser.OPEN_PARENTHESES, 0); }
		public TerminalNode CLOSE_PARENTHESES() { return getToken(BasicParser.CLOSE_PARENTHESES, 0); }
		public TerminalNode IS() { return getToken(BasicParser.IS, 0); }
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public TerminalNode END() { return getToken(BasicParser.END, 0); }
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(BasicParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(BasicParser.COMMA, i);
		}
		public FuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitFunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncContext func() throws RecognitionException {
		FuncContext _localctx = new FuncContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_func);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			type();
			setState(92);
			ident();
			setState(93);
			match(OPEN_PARENTHESES);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==BASE_TYPE || _la==PAIR) {
				{
				setState(94);
				param();
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(95);
					match(COMMA);
					setState(96);
					param();
					}
					}
					setState(101);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(104);
			match(CLOSE_PARENTHESES);
			setState(105);
			match(IS);
			setState(106);
			stat(0);
			setState(107);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			type();
			setState(110);
			ident();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public StatSkipContext statSkip() {
			return getRuleContext(StatSkipContext.class,0);
		}
		public StatInitVarContext statInitVar() {
			return getRuleContext(StatInitVarContext.class,0);
		}
		public StatAssignVarContext statAssignVar() {
			return getRuleContext(StatAssignVarContext.class,0);
		}
		public StatReadContext statRead() {
			return getRuleContext(StatReadContext.class,0);
		}
		public StatFreeContext statFree() {
			return getRuleContext(StatFreeContext.class,0);
		}
		public StatReturnContext statReturn() {
			return getRuleContext(StatReturnContext.class,0);
		}
		public StatExitContext statExit() {
			return getRuleContext(StatExitContext.class,0);
		}
		public StatPrintContext statPrint() {
			return getRuleContext(StatPrintContext.class,0);
		}
		public StatPrintlnContext statPrintln() {
			return getRuleContext(StatPrintlnContext.class,0);
		}
		public StatCondContext statCond() {
			return getRuleContext(StatCondContext.class,0);
		}
		public StatLoopContext statLoop() {
			return getRuleContext(StatLoopContext.class,0);
		}
		public StatBeginContext statBegin() {
			return getRuleContext(StatBeginContext.class,0);
		}
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public TerminalNode SEMICOLON() { return getToken(BasicParser.SEMICOLON, 0); }
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		return stat(0);
	}

	private StatContext stat(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		StatContext _localctx = new StatContext(_ctx, _parentState);
		StatContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_stat, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SKIPS:
				{
				setState(113);
				statSkip();
				}
				break;
			case BASE_TYPE:
			case PAIR:
				{
				setState(114);
				statInitVar();
				}
				break;
			case FST:
			case SND:
			case IDENT:
				{
				setState(115);
				statAssignVar();
				}
				break;
			case READ:
				{
				setState(116);
				statRead();
				}
				break;
			case FREE:
				{
				setState(117);
				statFree();
				}
				break;
			case RETURN:
				{
				setState(118);
				statReturn();
				}
				break;
			case EXIT:
				{
				setState(119);
				statExit();
				}
				break;
			case PRINT:
				{
				setState(120);
				statPrint();
				}
				break;
			case PRINTLN:
				{
				setState(121);
				statPrintln();
				}
				break;
			case IF:
				{
				setState(122);
				statCond();
				}
				break;
			case WHILE:
				{
				setState(123);
				statLoop();
				}
				break;
			case BEGIN:
				{
				setState(124);
				statBegin();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(132);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new StatContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_stat);
					setState(127);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(128);
					match(SEMICOLON);
					setState(129);
					stat(2);
					}
					} 
				}
				setState(134);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class StatSkipContext extends ParserRuleContext {
		public TerminalNode SKIPS() { return getToken(BasicParser.SKIPS, 0); }
		public StatSkipContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statSkip; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitStatSkip(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatSkipContext statSkip() throws RecognitionException {
		StatSkipContext _localctx = new StatSkipContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_statSkip);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(SKIPS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatInitVarContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(BasicParser.ASSIGN, 0); }
		public AssignRhsContext assignRhs() {
			return getRuleContext(AssignRhsContext.class,0);
		}
		public StatInitVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statInitVar; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitStatInitVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatInitVarContext statInitVar() throws RecognitionException {
		StatInitVarContext _localctx = new StatInitVarContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_statInitVar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			type();
			setState(138);
			ident();
			setState(139);
			match(ASSIGN);
			setState(140);
			assignRhs();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatAssignVarContext extends ParserRuleContext {
		public AssignLhsContext assignLhs() {
			return getRuleContext(AssignLhsContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(BasicParser.ASSIGN, 0); }
		public AssignRhsContext assignRhs() {
			return getRuleContext(AssignRhsContext.class,0);
		}
		public StatAssignVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statAssignVar; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitStatAssignVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatAssignVarContext statAssignVar() throws RecognitionException {
		StatAssignVarContext _localctx = new StatAssignVarContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_statAssignVar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			assignLhs();
			setState(143);
			match(ASSIGN);
			setState(144);
			assignRhs();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatReadContext extends ParserRuleContext {
		public TerminalNode READ() { return getToken(BasicParser.READ, 0); }
		public AssignLhsContext assignLhs() {
			return getRuleContext(AssignLhsContext.class,0);
		}
		public StatReadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statRead; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitStatRead(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatReadContext statRead() throws RecognitionException {
		StatReadContext _localctx = new StatReadContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_statRead);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(READ);
			setState(147);
			assignLhs();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatFreeContext extends ParserRuleContext {
		public TerminalNode FREE() { return getToken(BasicParser.FREE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public StatFreeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statFree; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitStatFree(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatFreeContext statFree() throws RecognitionException {
		StatFreeContext _localctx = new StatFreeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_statFree);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(FREE);
			setState(150);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatReturnContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(BasicParser.RETURN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public StatReturnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statReturn; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitStatReturn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatReturnContext statReturn() throws RecognitionException {
		StatReturnContext _localctx = new StatReturnContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_statReturn);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(RETURN);
			setState(153);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatExitContext extends ParserRuleContext {
		public TerminalNode EXIT() { return getToken(BasicParser.EXIT, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public StatExitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statExit; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitStatExit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatExitContext statExit() throws RecognitionException {
		StatExitContext _localctx = new StatExitContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_statExit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(EXIT);
			setState(156);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatPrintContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(BasicParser.PRINT, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public StatPrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statPrint; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitStatPrint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatPrintContext statPrint() throws RecognitionException {
		StatPrintContext _localctx = new StatPrintContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_statPrint);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(PRINT);
			setState(159);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatPrintlnContext extends ParserRuleContext {
		public TerminalNode PRINTLN() { return getToken(BasicParser.PRINTLN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public StatPrintlnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statPrintln; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitStatPrintln(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatPrintlnContext statPrintln() throws RecognitionException {
		StatPrintlnContext _localctx = new StatPrintlnContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_statPrintln);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			match(PRINTLN);
			setState(162);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatCondContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(BasicParser.IF, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode THEN() { return getToken(BasicParser.THEN, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(BasicParser.ELSE, 0); }
		public TerminalNode FI() { return getToken(BasicParser.FI, 0); }
		public StatCondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statCond; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitStatCond(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatCondContext statCond() throws RecognitionException {
		StatCondContext _localctx = new StatCondContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_statCond);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			match(IF);
			setState(165);
			expr(0);
			setState(166);
			match(THEN);
			setState(167);
			stat(0);
			setState(168);
			match(ELSE);
			setState(169);
			stat(0);
			setState(170);
			match(FI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatLoopContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(BasicParser.WHILE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode DO() { return getToken(BasicParser.DO, 0); }
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public TerminalNode DONE() { return getToken(BasicParser.DONE, 0); }
		public StatLoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statLoop; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitStatLoop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatLoopContext statLoop() throws RecognitionException {
		StatLoopContext _localctx = new StatLoopContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_statLoop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			match(WHILE);
			setState(173);
			expr(0);
			setState(174);
			match(DO);
			setState(175);
			stat(0);
			setState(176);
			match(DONE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
